--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.2",
+    "axios": "^1.7.7",
+    "csv-parser": "^3.0.0",
+    "openai": "^4.67.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
